# KIDS25-Team8_cmdsaw

./: CLAUDE.md  README.md  Testing.ipynb  agent.py  assistant_log.txt  invocation_log.txt  llama_response.txt  parsing_log.txt  pyproject.toml  requirements.txt  standardization_log.txt  test.py  test_integration.py
.github/: copilot-instructions.md
cmdsaw/: cli.py  constants.py  containers.py  discovery.py  errors.py  json_review.py  parser.py  runner.py  serialize.py  translator.py  utils.py  wdl.py
cmdsaw/parsing/: cache.py  edam_mappings.py  llm_parser.py  prompts.py  resource_estimator.py  schema.py
flowgen/: README.md  __init__.py  __main__.py  parser.py  schema.py
flowgen/templates/: task.wdl
output/: samtools_help.txt
output/samtools_NEXTFLOW/: samtools.json
output/samtools_NEXTFLOW/samtools_1.21/: nextflow.config
output/samtools_WDL/: samtools.json
output/samtools_WDL/samtools_1.21/: README.md  samtools_depad.wdl  samtools_flags.wdl  samtools_head.wdl  samtools_samples.wdl  samtools_tview.wdl  samtools_view.wdl
sub_agents/: containers.py  environment.py  invocation.py  llama_response.txt  nextflow_generator.py  parsing.py  schema.py  standardization.py  test.json  troubleshooting.py  wdl_generator.py
tests/: test_case_sensitivity.py  test_container_info.py  test_file_format.py  test_file_role.py  test_json_review.py  test_piped_output.py  test_provider_support.py  test_subcommand_help_format.py  test_tool_no_subcommands.py  test_wdl_file_role.py  test_wdl_piped_output.py  test_wdl_requirements_section.py  test_wdl_sprocket_format.py
(+18 files in other folders)
